สร้างแท็บบาร์ด้านบน

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recommended tourist attractions in Chonburi Province</title>
+    <title>Recommended tourist attractions in Chonburi Province</title>
+      <link rel="stylesheet" href="css/styles.css" />
+      <link
+        href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap"rel="stylesheet"/>
 </head>
 <body>
+    <header class="header">
+        <h1>Go Chonburi</h1>
+        
+        <nav>
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="travel.html">Travel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
     
 </body>
 </html>
