สร้างแท็บบาร์ด้านล่าง

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
           </ul>
         </nav>
       </header>
-    
+
+      <footer class="footer">
+        <p>&copy; 2024 Travel In Chonburi.</p>
+      </footer>
+      
 </body>
 </html>
