--- a/travel.html
+++ b/travel.html
@@ -17,5 +17,10 @@
         </ul>
       </nav>
     </header>
+
+    <footer class="footer">
+        <p>&copy; 2024 Travel In Chonburi.</p>
+      </footer>
+      
   </body>
 </html>
