--- a/travel.html
+++ b/travel.html
@@ -8,6 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <h1>Go Chonburi</h1>
+
+        <nav>
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="travel.html">Travel</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <footer class="footer">
+        <p>&copy; 2024 Travel In Chonburi.</p>
+      </footer>
+      
 </body>
 </html>
