--- a/index.html
+++ b/index.html
@@ -22,6 +22,35 @@
         </nav>
       </header>
 
+      <main>
+        <div class="chonburi">
+          <h2>Travele In Chonburi</h2>
+        </div>
+        <div class="contact-item">
+          <a href="https://mini-game.org/%E0%B8%88%E0%B8%B1%E0%B8%87%E0%B8%AB%E0%B8%A7%E0%B8%B1%E0%B8%94%E0%B8%8A%E0%B8%A5%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5/" target="_blank" rel="noopener noreferrer">
+          <img
+            src="images/จังหวัดชลบุรี.jpg" alt="รูปจังหวัดชลบุรี" width="500"/>
+          </a>
+            <p>    
+              <small>
+                ที่มา: 
+                <a href="https://mini-game.org/%E0%B8%88%E0%B8%B1%E0%B8%87%E0%B8%AB%E0%B8%A7%E0%B8%B1%E0%B8%94%E0%B8%8A%E0%B8%A5%E0%B8%9A%E0%B8%B8%E0%B8%A3%E0%B8%B5/" target="_blank" rel="noopener noreferrer">
+                  mini-game
+                </a>
+              </small>
+            </p>
+          <p>
+            เป็นจังหวัดหนึ่งในภาคตะวันออกของประเทศไทย
+            ชุมชนเมืองศูนย์กลางของจังหวัด คือ เทศบาลเมืองชลบุรี
+            มีสถานที่  ท่องเที่ยวที่มีชื่อเสียงหลายแห่งตั้งอยู่
+            โดยมีเมืองท่องเที่ยวที่สำคัญของประเทศ <br>คือ เมืองพัทยา
+            นอกจากด้านอุตสาหกรรมการท่องเที่ยว
+            แล้วยังเป็นจังหวัดที่มีความสำคัญทางเศรษฐกิจสำคัญของภาคตะวันออกอย่างมาก ทั้งในด้านพาณิชยกรรมและอุตสาหกรรมต่าง
+            ๆ
+          </p>
+        </div>
+      </main>
+
       <script>
         const hamburger = document.getElementById("hamburger-menu");
         const navList = document.querySelector(".nav-list");
