--- a/travel.html
+++ b/travel.html
@@ -8,7 +8,7 @@
   <body>
     <header class="header">
       <h1>Go Chonburi</h1>
-
+      <div class="hamburger" id="hamburger-menu">☰</div>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
@@ -17,6 +17,16 @@
         </ul>
       </nav>
     </header>
+
+    <script>
+        
+        const hamburger = document.getElementById("hamburger-menu");
+        const navList = document.querySelector(".nav-list");
+
+        hamburger.addEventListener("click", () => {
+          navList.classList.toggle("active"); 
+        });
+      </script>
 
     <footer class="footer">
         <p>&copy; 2024 Travel In Chonburi.</p>
