เพิ่มเนื้อหาในส่วน main

--- a/travel.html
+++ b/travel.html
@@ -18,19 +18,234 @@
       </nav>
     </header>
 
-    <script>
-        
-        const hamburger = document.getElementById("hamburger-menu");
-        const navList = document.querySelector(".nav-list");
+    <main>
+      <section id="detail" class="travel">
+        <h3>แนะนำสถานที่ท่องเที่ยงจังหวัดชลบุรี</h3>
 
-        hamburger.addEventListener("click", () => {
-          navList.classList.toggle("active"); 
-        });
-      </script>
+      </section>
+      <!--สวนสัตว์เปิดเขาเขียว-->
+      <section id="detail" class="khaokheow">
+        <h2>สวนสัตว์เปิดเขาเขียว</h2>
+        <div class="khaokheow1">
+          <a href="https://salehere.co.th/articles/khao-kheow-open-zoo" target="_blank" rel="noopener noreferrer">
+            <img src="images/เขาเขียว1.jpg" alt="เขาเขียว1" class="img-khaokheow" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://salehere.co.th/articles/khao-kheow-open-zoo" target="_blank" rel="noopener noreferrer">
+                salehere
+              </a>
+            </small>
+          </p>
+
+          <p>
+            <span style="color: rgb(13, 138, 61)"
+              ><b>สวนสัตว์เปิดเขาเขียว</b></span
+            >
+            ตั้งอยู่ที่ ตำบลบางพระ อำเภอศรีราชา จังหวัดชลบุรี
+            เป็นสวนสัตว์เปิดขนาดใหญ่ในจังหวัดชลบุรี เป็นป่าแห่งเดียวของชลบุรี
+            ดำเนินงานโดยองค์การสวนสัตว์ นักท่องเที่ยวจะได้ชมสัตว์มากถึง 300 ชนิด
+            ทั้งสัตว์ของไทยและจากต่างประเทศ
+            ซึ่งสัตว์ส่วนใหญ่จะอยู่ในพื้นที่กว้างขวาง
+            มีการจัดสภาพแวดล้อมให้เป็นธรรมชาติเหมาะแก่อุปนิสัยของสัตว์นั้นๆ
+            และสามารถ ให้นักท่องเที่ยวเดินชมได้อย่างใกล้ชิด
+            แต่ก็ยังมีบางส่วนอยู่ในกรงเพื่อกันการหลบหนี
+            <br />และเพื่อความปลอดภัยของตัวนักท่องเที่ยวเอง <br />
+            <b>เวลาทำการ</b> : 08.00-18.00 น. ส่วนบริการ Night Safari มี 2 รอบ
+            คือเวลา 19.00 น. และ 20.00 น. <br />
+            <b>ค่าเข้าชม</b> : ชาวไทย ผู้ใหญ่ 100 บาท เด็ก 50 บาท ชาวต่างชาติ
+            300 บาท
+          </p>
+          <a href="https://roijang.com/chonburi/%E0%B8%AA%E0%B8%A7%E0%B8%99%E0%B8%AA%E0%B8%B1%E0%B8%95%E0%B8%A7%E0%B9%8C%E0%B9%80%E0%B8%9B%E0%B8%B4%E0%B8%94%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B9%80%E0%B8%82%E0%B8%B5%E0%B8%A2%E0%B8%A7/" target="_blank" rel="noopener noreferrer">
+            <img src="images/เขาเขียว2.jpg" alt="เขาเขียว2" class="img-khaokheow" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://roijang.com/chonburi/%E0%B8%AA%E0%B8%A7%E0%B8%99%E0%B8%AA%E0%B8%B1%E0%B8%95%E0%B8%A7%E0%B9%8C%E0%B9%80%E0%B8%9B%E0%B8%B4%E0%B8%94%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B9%80%E0%B8%82%E0%B8%B5%E0%B8%A2%E0%B8%A7/" target="_blank" rel="noopener noreferrer">
+                roijang
+              </a>
+            </small>
+          </p>
+        </div>
+      </section>
+
+      <!--เกาะสีชัง-->
+      <section id="detail" class="sichang">
+        <h2>เกาะสีชัง</h2>
+        <div class="khaokheow1">
+          <a href="https://www.prachachat.net/public-relations/news-1186283" target="_blank" rel="noopener noreferrer">
+            <img src="images/เกาะสีชัง2.jpg" alt="เกาะสีชัง2" class="img-sichang" width="500">
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://www.prachachat.net/public-relations/news-1186283" target="_blank" rel="noopener noreferrer">
+                prachachat
+              </a>
+            </small>
+          </p>
+
+          <p>
+            <span style="color: rgb(13, 138, 61)"><b>เกาะสีชัง</b></span>
+            เป็นเกาะขนาดใหญ่ที่มีฐานะเป็นอำเภอหนึ่งของชลบุรี
+            เป็นที่จอดเรือสินค้านานาชาติ
+            และเป็นเกาะน่าท่องเที่ยวในบรรยากาศท้องถิ่น
+            ซึ่งสามารถแวะท่องเที่ยวในวันเดียวหรือพักค้างคืนก็ได้
+            ชุมชนเกาะสีชังอยู่ทางด้านตะวันออกของเกาะ และเป็นพื้นที่ตั้ง
+            ท่าเรือเทววงศ์ (ท่าล่าง) รวมทั้งยังเป็นจุด<br />เริ่มต้นการเดินทางด้วยรถสามล้อเครื่องหรือสกายแล็ปไปสู่จุดท่องเที่ยวต่างๆ
+            บนเกาะ
+          </p>
+          <a href="https://pantip.com/topic/39480333" target="_blank" rel="noopener noreferrer" >
+            <img src="images/เกาะสีชัง1.jpg" alt="เกาะสีชัง1" class="img-sichang" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://pantip.com/topic/39480333" target="_blank" rel="noopener noreferrer">
+                pantip
+              </a>
+            </small>
+          </p>
+        </div>
+      </section>
+
+      <!--พัทยา-->
+      <section id="detail" class="pattaya">
+        <h2>พัทยา</h2>
+        <div class="pattaya1">
+          <a href="https://www.dasta.or.th/th/article/350" target="_blank" rel="noopener noreferrer">
+            <img src="images/พัทยา1.jpg" alt="พัทยา1" class="img-pattaya" width="500"/>
+          </a>
+
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://www.dasta.or.th/th/article/350" target="_blank" rel="noopener noreferrer">
+                dasta
+              </a>
+            </small>
+          </p>
+
+          <p>
+            <span style="color: rgb(13, 138, 61)"><b>พัทยา</b></span>
+            มีที่ท่องเที่ยวมากมายหลากหลายรูปแบบ โดย แบ่งโซน การท่องเที่ยวออกเป็น
+            4 ส่วนด้วยกัน คือ พัทยาเหนือ, พัทยากลาง, พัทยาใต้, และหาดจอมเทียน
+            ยังมีเกาะเล็กเกาะน้อยที่น่าสนใจไปท่องเที่ยว อีกหลายแห่ง เช่น
+            เกาะล้าน เกาะครก เกาะสาก ฯลฯ ซึ่งแต่ละเกาะนั้น ล้วนมีทัศนียภาพสวยงาม
+            เช่น หาดทรายขาว น้ำทะเลใส มีแนวปะการังอุดมสมบูรณ์
+            และนอกจากที่เที่ยวทางทะเลแล้ว
+            พัทยายังมีถนนคนเดินให้ผู้ที่ไปได้เลือกท่องเที่ยวอีกด้วย
+          </p>
+          <a href="https://checkinpoolvilla.com/news_detail/10_%E0%B8%96%E0%B8%99%E0%B8%99%E0%B8%84%E0%B8%99%E0%B9%80%E0%B8%94%E0%B8%B4%E0%B8%99%E0%B9%80%E0%B8%A1%E0%B8%B7%E0%B8%AD%E0%B8%87%E0%B8%9E%E0%B8%B1%E0%B8%97%E0%B8%A2%E0%B8%B2_%E0%B9%81%E0%B8%AB%E0%B8%A5%E0%B9%88%E0%B8%87%E0%B8%A3%E0%B8%A7%E0%B8%A1%E0%B8%A3%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B9%80%E0%B8%94%E0%B9%87%E0%B8%94" target="_blank" rel="noopener noreferrer">
+            <img src="images/พัทยา2.jpg" alt="พัทยา2" class="img-sichang" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://checkinpoolvilla.com/news_detail/10_%E0%B8%96%E0%B8%99%E0%B8%99%E0%B8%84%E0%B8%99%E0%B9%80%E0%B8%94%E0%B8%B4%E0%B8%99%E0%B9%80%E0%B8%A1%E0%B8%B7%E0%B8%AD%E0%B8%87%E0%B8%9E%E0%B8%B1%E0%B8%97%E0%B8%A2%E0%B8%B2_%E0%B9%81%E0%B8%AB%E0%B8%A5%E0%B9%88%E0%B8%87%E0%B8%A3%E0%B8%A7%E0%B8%A1%E0%B8%A3%E0%B9%89%E0%B8%B2%E0%B8%99%E0%B9%80%E0%B8%94%E0%B9%87%E0%B8%94" target="_blank" rel="noopener noreferrer">
+                checkinpoolvilla
+              </a>
+            </small>
+          </p>
+        </div>
+      </section>
+
+      <!--ศาลเจ้าพ่อเขาใหญ่-->
+      <section id="detail" class="jaopor">
+        <h2>ศาลเจ้าพ่อเขาใหญ่</h2>
+        <div class="pattaya1">
+          <a href="https://baanpuck.com/%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%A2%E0%B8%A7/%E0%B8%A8%E0%B8%B2%E0%B8%A5%E0%B9%80%E0%B8%88%E0%B9%89%E0%B8%B2%E0%B8%9E%E0%B9%88%E0%B8%AD%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B9%83%E0%B8%AB%E0%B8%8D%E0%B9%88/" target="_blank" rel="noopener noreferrer" >
+            <img src="images/ศาลเจ้าพ่อเขาใหญ่2.jpg" alt="ศาลเจ้าพ่อเขาใหญ่2" class="img-jaopor" width="500"/>
+          </a>
+
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://baanpuck.com/%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%A2%E0%B8%A7/%E0%B8%A8%E0%B8%B2%E0%B8%A5%E0%B9%80%E0%B8%88%E0%B9%89%E0%B8%B2%E0%B8%9E%E0%B9%88%E0%B8%AD%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B9%83%E0%B8%AB%E0%B8%8D%E0%B9%88/" target="_blank" rel="noopener noreferrer" >
+                baanpuck
+              </a>
+            </small>
+          </p>
+
+          <p>
+            <span style="color: rgb(13, 138, 61)"
+              ><b>ศาลเจ้าพ่อเขาใหญ่</b></span
+            >
+            สิ่งศักดิ์สิทธิ์คู่บ้านคู่เมืองเกาะสีชัง จังหวัดชลบุรี
+            <br />ที่ตั้งอยู่บนเขาสูงทางทิศเหนือของเกาะ
+            <br />แขกไปใครมาที่แวะเวียนมาที่นี่ต่างก็มองเห็นศาลนี้ได้อย่างเด่นชัดตั้งแต่มาถึงเกาะนี้เลย
+            <br />ด้านในนั้นก็เต็มไปด้วยศาลเจ้าเทพเจ้าจีน
+            และสิ่งศักดิ์สิทธิ์ต่างๆsมากมาย
+          </p>
+          <a href="https://travel.trueid.net/detail/O21qmGKVeKO2" target="_blank" rel="noopener noreferrer">
+            <img src="images/ศาลเจ้าพ่อเขาใหญ่1.jpg" alt="ศาลเจ้าพ่อเขาใหญ่1" class="img-jaopor" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://travel.trueid.net/detail/O21qmGKVeKO2" target="_blank" rel="noopener noreferrer">
+                travel.trueid
+              </a>
+            </small>
+          </p>
+        </div>
+      </section>
+
+      <!--วัดเขาตะแบก-->
+
+      <section id="detail" class="wad">
+        <h2>วัดเขาตะแบก</h2>
+        <div class="wad1">
+          <a href="https://baanpuck.com/%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%A2%E0%B8%A7/%E0%B8%A7%E0%B8%B1%E0%B8%94%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B8%95%E0%B8%B0%E0%B9%81%E0%B8%9A%E0%B8%81/" target="_blank" rel="noopener noreferrer">
+            <img src="images/วัดเขาตะแบก1.jpg" alt="วัดเขาตะแบก1" class="img-wad" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://baanpuck.com/%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B9%80%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%A2%E0%B8%A7/%E0%B8%A7%E0%B8%B1%E0%B8%94%E0%B9%80%E0%B8%82%E0%B8%B2%E0%B8%95%E0%B8%B0%E0%B9%81%E0%B8%9A%E0%B8%81/" target="_blank" rel="noopener noreferrer">
+                baanpuck
+              </a>
+            </small>
+          </p>
+
+          <p>
+            <span style="color: rgb(13, 138, 61)"><b>วัดเขาตะแบก</b></span>
+            ตั้งอยู่ที่ตำบลหนองขาม อำเภอศรีราชา จังหวัดชลบุรี
+            เป็นวัดเก่าแก่ที่มีต้นตะแบกจำนวนมากอยู่ภายในบริเวณวัด
+            จนกลายเป็นที่มาของชื่อวัดไปโดยปริยาย
+            บริเวณทางขึ้นวัดเขาตะแบกเป็นเนินเขาที่รายล้อมไปด้วยต้นไม้สูงใหญ่และป่าเขา
+            มีความเป็นธรรมชาติ จุดเช็กอินแลนด์มาร์กของ<br />วัดเขาตะแบก คือ
+            สกายวอล์ก และในบริเวณวัดยังมีกิจกรรมอื่นๆให้ทำ เช่น
+            ผูกริบบิ้นเสริมสิริมงคล
+          </p>
+          <a href="https://salehere.co.th/articles/khao-tabak-temple" target="_blank" rel="noopener noreferrer">
+            <img src="images/วัดเขาตะแบก2.jpg" alt="วัดเขาตะแบก2" class="img-wad" width="500"/>
+          </a>
+          <p>
+            <small>
+              ที่มา:
+              <a href="https://salehere.co.th/articles/khao-tabak-temple" target="_blank" rel="noopener noreferrer">
+                salehere
+              </a>
+            </small>
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <script>
+      const hamburger = document.getElementById("hamburger-menu");
+      const navList = document.querySelector(".nav-list");
+
+      hamburger.addEventListener("click", () => {
+        navList.classList.toggle("active");
+      });
+    </script>
 
     <footer class="footer">
-        <p>&copy; 2024 Travel In Chonburi.</p>
-      </footer>
-      
+      <p>&copy; 2024 Travel In Chonburi.</p>
+    </footer>
   </body>
 </html>
